Device security: secure boot dialog has too much text
I'm not sure quite how we ended up with so much text, but the current prose is a bit much:
I think the design goals for this window are to briefly expand on the secure boot status tile in the panel, and to explain the status's significance.
The text in the mockups is more concise: