panels: firmware-security: Reduce the length of description

The descriptions of secure boot status were made simpler to improve the
user friendly.

Link: https://gitlab.gnome.org/GNOME/gnome-control-center/-/issues/1937
Signed-off-by: Kate Hsuan <hpa@redhat.com>